--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,10 +15,10 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.17
+          go-version: 1.18
 
       - name: Format
-        uses: Jerome1337/gofmt-action@v1.0.4
+        run: gofmt -l .
 
       - name: Build
         run: go build -v ./...
